# Clauge

./: .gitignore  README.md  app.js  changelog.html  enterprise.html  index.html  package.json  pricing.html  privacy.html  terms.html
.github/workflows/: create-release.yml  publish.yml  test-build.yml  test-bundle.yml
auth/: google-callback.html
docs/: CNAME  _redirects  app.js  changelog.html  index.html  style.css
docs/auth/: callback.html
docs/worker/: package.json  wrangler.toml
docs/worker/src/: index.js
functions/api/: contact.js
scripts/: bump-version.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  ZeroAnyPane.desktop  ZeroAnyWorkbench.desktop  build.rs  com.clauge.desktop.metainfo.xml  com.digyear.zeroany.workbench.metainfo.xml  com.zeroany.workbench.metainfo.xml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  widget.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 11_create_workspace_tables.sql  12_workspace_search_freeze.sql  13_workspace_card_comments.sql  23_workspace_meetings.sql  25_agent_session_base_branch.sql  26_agent_discovered_sessions.sql  27_agent_discovered_session_project_root.sql  8_explorer_connections.sql
src-tauri/src/: lib.rs
src-tauri/src/cloud/: commands.rs  config.rs  credentials_probe.rs  snapshots.rs  sync.rs
src-tauri/src/cloud/domains/: coworkers.rs  explorer.rs  mod.rs  sql.rs
src-tauri/src/commands/: logs.rs  mod.rs
src-tauri/src/commands/ai/: anthropic.rs  mod.rs  openai.rs  tools.rs
src-tauri/src/companion/: api.rs  fanout.rs  files.rs  lifecycle.rs  mod.rs  pairing.rs  ports.rs  push.rs  server.rs  sysmon.rs  ws.rs
src-tauri/src/db/: bootstrap.rs  migrator.rs  mod.rs  pool.rs
src-tauri/src/github/: gist.rs  oauth.rs
src-tauri/src/modes/: mod.rs
src-tauri/src/modes/agent/: ai_tools.rs  commands.rs  files.rs  hooks.rs  mod.rs  models.rs  plugins.rs  terminal.rs  usage.rs  worktree.rs
src-tauri/src/modes/canvas/: commands.rs
src-tauri/src/modes/explorer/: connections.rs
src-tauri/src/modes/nosql/: ai_tools.rs  client.rs
src-tauri/src/modes/rest/: history.rs  http_executor.rs  import_export.rs
src-tauri/src/modes/sql/: ai_tools.rs  clickhouse_client.rs  client.rs  d1_client.rs  mod.rs
src-tauri/src/modes/ssh/: ai_tools.rs  mod.rs
src-tauri/src/modes/workspace/: agent_spawn.rs  ai_tools.rs  cli_errors.rs  commands.rs  mcp.rs  mention.rs  mod.rs  models.rs  pr.rs  push.rs  tickets.rs
src-tauri/src/modes/workspace/mcp/: dispatch.rs  server.rs  tools.rs
src-tauri/src/modes/workspace/meetings/: commands.rs  detect.rs  mod.rs  permissions.rs  recorder.rs  repo.rs  summarize.rs  widget.rs
src-tauri/src/shared/: app_config.rs  logger.rs  mod.rs
src-tauri/src/shared/ai/: mod.rs
src-tauri/src/shared/ai/clients/: collect.rs  errors.rs  mod.rs  openai.rs
src-tauri/src/shared/audio/: chunker.rs  mic.rs  mod.rs  resample.rs  stream.rs
src-tauri/src/shared/audio/system/: linux.rs  macos.rs  mod.rs  stub.rs  windows.rs
src-tauri/src/shared/cli/: claude.rs  codex.rs  hermes.rs  mod.rs  opencode.rs  registry.rs  runner.rs
src-tauri/src/shared/http/: mod.rs
src-tauri/src/shared/platform/: credential_store.rs  linux_file_store.rs  macos.rs  mod.rs
src-tauri/src/shared/repos/: coworkers.rs  discovered_sessions.rs  mod.rs  sessions.rs  sql_connections.rs  workspaces.rs
src-tauri/src/shared/transcribe/: engine.rs  mod.rs  models.rs
src-tauri/src/shared/updater/: channel.rs  commands.rs
src-tauri/src/telemetry/: device.rs
src/lib/commands/: index.ts  syncReload.ts
src/lib/components/agent/: AgentGitPanel.svelte  AgentNav.svelte  AgentPanel.svelte  EditSessionModal.svelte
src/lib/components/ai/: AIPanel.svelte
src/lib/components/cloud/: DeviceSetupModal.svelte  UpgradeModal.svelte
src/lib/components/env/: EnvManagerModal.svelte
src/lib/components/nav/: HistoryPanel.svelte  NavPanel.svelte
src/lib/components/onboarding/: Onboarding.svelte
src/lib/components/rest/: BodyEditor.svelte  KVTable.svelte
src/lib/components/settings/: AccountTabContent.svelte  MobileTabContent.svelte  SettingsModal.svelte  SettingsModal.svelte.css
src/lib/components/sidebar/: GetProButton.svelte  Sidebar.svelte
src/lib/components/sql/: ResultsTable.svelte
src/lib/components/ssh/: EditSshProfileModal.svelte  NewSshProfileModal.svelte  SshNav.svelte  SshPanel.svelte
src/lib/components/statusbar/: MeetingRecIndicator.svelte  StatusBar.svelte
src/lib/components/topbar/: Topbar.svelte
src/lib/modes/agent/: branch-name.test.ts  branch-name.ts  canvas-adapter.ts  commands.ts  session-state.test.ts  session-state.ts  stores.ts  types.ts
src/lib/modes/nosql/: stores.ts
src/lib/modes/rest/: canvas-adapter.ts  commands.ts  stores.ts
src/lib/modes/workspace/: agentIcon.ts  attribution.ts  autoMove.ts  cardMarkdown.ts  commands.ts  milkdown-overrides.css  stores.ts  types.ts
src/lib/services/: ai-chat.ts  companionLifecycle.ts  firstSync.ts
src/lib/shared/agent/: ProviderNotInstalledModal.svelte  providers.ts
src/lib/shared/constants/: events.ts  timings.ts
src/lib/shared/primitives/: ImportExportModal.svelte  (+5 more)
src/lib/stores/: app.ts  terminal.svelte.ts
src/lib/utils/: errors.ts  shortcuts.ts  updater.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/widget/: +page.svelte
static/: hermes-icon-LICENSE.txt
web/: 404.html  app.js  changelog.html  config.js  design.css  enterprise.html  index.html  pricing.html  privacy.html  site.webmanifest  style.css  terms.html  upgrade-success.html
worker/: vitest.config.js  wrangler.toml
worker/migrations/: 0001_init.sql  0004_credit_usage_mode.sql  0005_lifetime.sql  0006_order_idempotency.sql  0007_per_plan_credits.sql
worker/src/: ai.js  auth.js  billing.js  cors.js  credits.js  cron.js  db.js  index.js  jwks.js  kv.js  polar.js  ratelimit.js  sync.js  telemetry.js  upstream.js
worker/test/: ai.test.js  auth.test.js  billing.test.js  credits.test.js  cron.test.js  polar.test.js  ratelimit.test.js  upstream.test.js
(+58 files in other folders)
