[package]
name = "zeroany-workbench"
version = "3.5.0"
description = "ZeroAny Workbench — Zero, one, any workspace"
authors = ["ZeroAny Workbench contributors"]
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/digyear/Clauge"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "json", "native-tls", "stream", "multipart"] }
url = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "tls-rustls", "chrono", "uuid", "json", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
socket2 = "0.6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sys-locale = "0.3"
os_info = { version = "3", default-features = false }
rust_decimal = { version = "1", features = ["serde-with-str"] }
mime_guess = "2"
mongodb = "3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
portable-pty = "0.9.0"
notify = "8"
parking_lot = "0.12"
base64 = "0.22"
dirs = "5"
flate2 = "1"
hex = "0.4"
tauri-plugin-notification = "2"
# SSH client (pure-Rust, cross-platform)
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"
async-stream = "0.3"
sha2 = "0.10"
# Argv-style tokenizer used for OpenSSH ProxyCommand. Splits a template
# like `cloudflared access ssh --hostname %h` into argv WITHOUT spawning
# a shell — keeps cross-platform behavior identical and avoids shell
# escaping issues. See modes/ssh/ssh_session.rs spawn_proxy_command_stream.
shell-words = "1.1"
# Explorer mode (SFTP / FTP / S3 / Azure Blob) — shared deps.
bytes = "1"
futures = "0.3"
regex = "1"
# SFTP backend rides on the existing russh dependency.
russh-sftp = "2"
# S3-family backend (AWS / R2 / MinIO / Wasabi / B2 / GCS-S3compat / Custom).
# Default features include ListObjectsV2 + XML parsing; no need for quick-xml separately.
rusty-s3 = "0.9"
# Azure Blob Storage backend. The legacy `azure_storage` SDK uses its own
# HTTP stack — proxy support comes from honouring system env vars
# (HTTPS_PROXY etc.); explicit proxy_url from our settings is best-effort.
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_core = "0.21"
# FTP backend (plain). FTPS-explicit deferred — suppaftp's tokio
# `into_secure` flow has typing friction we'll resolve in v2.
suppaftp = { version = "8", features = ["tokio"] }
axum = { version = "0.8.4", default-features = false, features = ["tokio", "http1", "json", "ws", "query"] }
# Companion server (src/companion/): device-token entropy + pair codes,
# and LAN/tailnet interface enumeration for the pairing QR's hosts list.
rand = "0.10"
local-ip-address = "0.6"
toml_edit = "0.25.5"
# Meeting call detection (workspace/meetings/detect.rs): per-tick process-name
# snapshot only — default features off keeps disk/network/component probes out.
# 0.39.x raised MSRV to rustc 1.95; 0.38 is the newest line our toolchain builds.
sysinfo = { version = "0.38", default-features = false, features = ["system", "disk"] }
# Battery level for the System Monitor; gracefully optional when no battery is present.
battery = { package = "starship-battery", version = "0.11" }
# Listening-port enumeration for the mobile Ports inspector.
netstat2 = "0.11"
# Meeting-notes audio kernel (shared/audio/).
# cpal ships default = [] — without the "pulseaudio" feature the Linux host is
# bare ALSA, which exposes no "<sink>.monitor" capture sources. The feature is
# inert off Linux: cpal target-gates both the dep and the host module to
# linux/BSD. PipeWire systems are reached through pipewire-pulse, so the
# native "pipewire" feature (which needs libpipewire at build time) stays off.
cpal = { version = "0.18", features = ["pulseaudio"] }
rubato = "3.0"
audioadapter-buffers = "3.0"
# Local Whisper transcription (shared/transcribe/). whisper-rs compiles
# whisper.cpp through cmake; CUDA/Vulkan stay off — CPU everywhere, with
# Metal+CoreML layered on for macOS below (features are additive per-target).
# CoreML builds with WHISPER_COREML_ALLOW_FALLBACK=1, so missing .mlmodelc
# files degrade to Metal/CPU instead of failing context load.
# log_backend routes whisper.cpp/GGML stderr spam into the `log` crate
# (picked up by our rolling file logger) via install_logging_hooks().
whisper-rs = { version = "0.16", features = ["log_backend"] }
# Credential store — per-OS dispatch in shared/platform/credential_store.rs:
#   macOS   → shell-out to /usr/bin/security (implicitly trusted by Keychain,
#             avoids re-signing prompts).
#   Windows → `keyring` crate, Windows Credential Manager backend.
#   Linux   → encrypted file at $XDG_DATA_HOME/zeroany-workbench/credentials.bin
#             (AES-256-GCM, key derived from /etc/machine-id via HKDF-SHA256).
#             Secret Service / libsecret is intentionally NOT used: gnome-keyring
#             pops a system "unlock with login password" dialog whenever the
#             user's keyring password drifts from their login password, and a
#             cancelled prompt makes every store/get fail with "no result found".
#             That broke Cloud sign-in (silent sign-out on every restart) and
#             dormant-broke SSH/Explorer password persistence too.
[target.'cfg(target_os = "linux")'.dependencies]
aes-gcm = "0.10"
hkdf = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
window-vibrancy = "0.7"
# System-audio capture via Core Audio process taps (shared/audio/system/macos.rs).
# crates.io 0.15.2 matches the repo HEAD, so no git pin is needed. Default
# features pull every Apple framework binding (tokio, metal, ...) — trimmed to
# the Core Audio surface. macos_14_2 gates TapGuard (the tap API's floor).
cidre = { version = "0.15.2", default-features = false, features = ["core_audio", "at", "av", "cat", "cf", "cm", "ns", "macos_14_2"] }
# Metal only — we don't ship the CoreML encoder (.mlmodelc), so the
# `coreml` feature would make whisper attempt + fail to load it on every
# chunk (log spam + wasted work) before falling back. Metal is plenty fast
# on Apple silicon. Re-add `coreml` only alongside shipping the .mlmodelc.
whisper-rs = { version = "0.16", features = ["metal", "log_backend"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
window-vibrancy = "0.7"
# Match the windows-rs major Tauri 2.10 pulls in to avoid shipping two
# copies of the crate. HWND is the same shape in both, so the cast in
# appearance/window_chrome.rs works either way.
# Win32_Media_Audio + Win32_System_Com power meeting detection's WASAPI
# session walk (IMMDeviceEnumerator → IAudioSessionManager2). StructuredStorage
# is pulled in by IMMDevice::Activate's PROPVARIANT parameter type.
windows = { version = "0.61", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_Media_Audio", "Win32_System_Com", "Win32_System_Com_StructuredStorage"] }

# Single-instance enforcement on Linux + Windows. macOS .app bundles
# are single-instance natively, so this plugin is gated to other OSes.
# Forwards deep-link URIs from the new launch attempt to the running
# process — OAuth callbacks land in the original window instead of
# spawning a fresh instance.
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[dev-dependencies]
# WAV reader for the transcription smoke test (shared/transcribe/engine.rs).
hound = "3.5"
